# clique_task

./: .gitignore  README.md  docker-compose.yml  run_neo4j_docker.sh  run_occlum_docker.sh
client/: Cargo.toml
client/src/: main.rs
crates/simple-cypher/: Cargo.toml
crates/simple-cypher/src/: cypher.rs  item.rs  lib.rs  node.rs  relation.rs  relationship.rs  rows.rs
enclave/: 1.sh  2.sh  Occlum.json  run_in_host.sh  run_tee_app_on_occlum.sh  rust.yaml
enclave/tee_app/: Cargo.toml
enclave/tee_app/src/: graph.rs  main.rs  server.rs
enclave/tee_app/src/crypto/: mod.rs  seal_key.rs
